feat: user controller
